# walrus

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
tests/: test_api.py  test_api_capital.py  test_api_hello.py  test_country.py
tests/test_data/: test-data.csv
vineetbansal_walrus.egg-info/: PKG-INFO  SOURCES.txt
walrus/: FileConfig.py  api.py  country.py
