[project]
name = "vineetbansal-walrus"
version = "1.0.0"
authors = [
  { name="Vineet Bansal", email="vineetb@princeton.edu" },
]
description = "Some description here"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pandas"
]

[tool.setuptools]
include = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
