[project]
name = "vineetbansal-walrus"
version = "2.0.0"
authors = [
  { name="Vineet Bansal", email="vineetb@princeton.edu" },
]
description = "Some description here"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.setuptools.package-data]
walrus = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "flake8",
    "pyright"
]


