[project]
name = "vineetbansal-walrus"
version = "3.1.0"
authors = [
  { name="Vineet Bansal", email="vineetb@princeton.edu" },
]
description = "Some description here"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.setuptools.package-data]
walrus = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "pytest",
    "coveralls",
    "twine",
    "flake8"
]


